--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <h1>Welcome to Raagame2!</h1>
     <h2>Go to <a href="https://sites.google.com/jcpsnj.org/intro/home">intro</a> for more info</h2>
     <div class="button-container">
-      <button class="game-button raagame3" onclick="showGameModal('makeover', 'https://raahilaalam.github.io/gg/gg')">Play Raagame3</button>
+      <button class="game-button raagame3" onclick="showGameModal('makeover', 'https://raahilaalam.github.io/gg/gg.html')">Play Raagame3</button>
       <button class="auth-button" onclick="showSignUpForm()">Sign Up</button>
       <button class="auth-button" onclick="showSignInForm()">Sign In</button>
     </div>
