--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       overflow: hidden;
       font-family: 'Poppins', sans-serif;
-      background: radial-gradient(circle at center, #FFC0CB, ##800080);
+      background: radial-gradient(circle at center, #FFC0CB, #800080);
       background-size: 400% 400%;
       animation: swirl 10s linear infinite;
       color: white;
