--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 
   <!-- Main Buttons -->
   <div>
-    <h1>Welcome to Raagame2!</h1>
-    <h2>Go to <a href="https://sites.google.com/jcpsnj.org/intro/home">intro</a> for more info</h2>
+    <h1>Welcome to the Girly Games</h1>
+    <h2>Games for girls only,which is constantly updating</h2>
     <div class="button-container">
-      <button class="game-button raagame3" onclick="showGameModal('makeover', 'https://raahilaalam.github.io/gg/gg.html')">Play Raagame3</button>
+      <button class="game-button raagame3" onclick="showGameModal('makeover', 'https://raahilaalam.github.io/gg/gg.html')">Play Glam Girl Dress Up</button>
       <button class="auth-button" onclick="showSignUpForm()">Sign Up</button>
       <button class="auth-button" onclick="showSignInForm()">Sign In</button>
     </div>
