--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Step into Raagame2 with Raahil. Enjoy free unblocked games and create your own account to unlock more!">
-  <title>Welcome to Raagame2</title>
+  <title>Welcome to Girly Games</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;900&display=swap" rel="stylesheet">
   <style>
     body {
@@ -110,6 +110,7 @@
     <h2>Games for girls only,which is constantly updating</h2>
     <div class="button-container">
       <button class="game-button raagame3" onclick="showGameModal('makeover', 'https://raahilaalam.github.io/gg/gg.html')">Play Glam Girl Dress Up</button>
+      <button class="game-button raagame3" onclick="showGameModal('nail art', 'https://www.crazygames.com/embed/nail-art-salon-for-girls')">Play Nail Art</button>
       <button class="auth-button" onclick="showSignUpForm()">Sign Up</button>
       <button class="auth-button" onclick="showSignInForm()">Sign In</button>
     </div>
