--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <div class="button-container">
       <button class="game-button raagame3" onclick="showGameModal('makeover', 'https://raahilaalam.github.io/gg/gg.html')">Play Glam Girl Dress Up</button>
       <button class="game-button raagame3" onclick="showGameModal('nail art', 'https://www.crazygames.com/embed/nail-art-salon-for-girls')">Play Nail Art</button>
+      <button class="game-button raagame3" onclick="showGameModal('princess makup', 'https://www.crazygames.com/embed/beauty-princess-makeup-game')">Play Beauty Princess Makup</button>
       <button class="auth-button" onclick="showSignUpForm()">Sign Up</button>
       <button class="auth-button" onclick="showSignInForm()">Sign In</button>
     </div>
