--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
       <button class="game-button raagame3" onclick="showGameModal('makeover', 'https://raahilaalam.github.io/gg/gg.html')">Play Glam Girl Dress Up</button>
       <button class="game-button raagame3" onclick="showGameModal('nail art', 'https://www.crazygames.com/embed/nail-art-salon-for-girls')">Play Nail Art</button>
       <button class="game-button raagame3" onclick="showGameModal('princess makup', 'https://www.crazygames.com/embed/beauty-princess-makeup-game')">Play Beauty Princess Makup</button>
+      <button class="game-button raagame3" onclick="showGameModal('Vortella makup', 'https://poki.com/en/g/vortellas-dress-up')">Play Votella's Dress Up</button>
       <button class="auth-button" onclick="showSignUpForm()">Sign Up</button>
       <button class="auth-button" onclick="showSignInForm()">Sign In</button>
     </div>
